[project]

name = "games-project-padzhev"
version = "0.1.0"
description = "lilpip"
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[project.scripts]
VD-even = "VD_games.scripts.VD_even:main"
VD-calc = "VD_games.scripts.brain_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
VD-progression = "VD_games.scripts.vd_progression:main"
VD-prime = "VD_games.scripts.vd_prime:main"
